examples/type_system/failing/03_runtime_return_violation.flx
fn bad() -> Int {
    "not-an-int"
}

// Runtime contract violation on function return boundary.
bad()
